@@ -5,6 +5,10 @@
 // 	- Details.
 //========================================
 
+02/01/2010
+	r172 [pakpil]
+	* Added recoded SC_FEINTBOMB.
+
 01/31/2010
 	r170 [pakpil]
 	* Fixed WA_SWING_DANCE, WA_SYMPHONY_OF_LOVER, WA_MOONLIT_SERENADE, MI_RUSH_WINDMILL, MI_ECHOSONG, MI_HARMONIZE that are not stackable.
